--- a/views/invoices.handlebars
+++ b/views/invoices.handlebars
@@ -2,7 +2,7 @@
     <h1>Orders</h1>
     <table>
         <tr>
-          <th colspan="2" style="color: red";>search by date or customer field</th>
+          <th colspan="2" style="color: red";>Add a search by date or customer filter</th>
           <td>&nbsp;</td>
         </tr>
 
