added search functionality

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
 form {padding: 50px 0}
 th, td {padding: 5px 10px 5px 25px;}
 .container {margin: 50px auto;}
+#search_string {max-width: 200px; display: inline; margin: 10px; }
