--- a/views/brands.handlebars
+++ b/views/brands.handlebars
@@ -1,10 +1,10 @@
 <div class="container">
   <h1>Add a Brand</h1>
-<form class="row" onsubmit="return false">
+<form class="row" id="addbrand" action="/brands" method="POST">
 
   <div class="form-group col-sm-6 col-md-4 col-lg-3">
     <label for="inputBrand">Brand</label>
-    <input type="text" class="form-control" id="brandname_input"  placeholder="Enter brand">
+    <input type="text" class="form-control" id="brandname_input" name="brandname"  placeholder="Enter brand">
   </div>
 
   <div class="form-group col-sm-12">
