--- a/views/invoices.handlebars
+++ b/views/invoices.handlebars
@@ -19,9 +19,10 @@
         <tr>
           <td>{{orderid}}</td>
           <td  >{{firstname}} {{lastname}} </td>
-          <td  class="money">{{price}}</td>
+          <td  class="money">{{total}}</td>
           
-          <td><button type="submit" class="btn btn-primary">Delete</button></td>
+          <td><button class="btn btn-primary" onclick="deleteOrder({{orderid}})">Delete</button></td>
+          <td><a href="/invoices/{{orderid}}">Update</a></td>
                     <!-- Button trigger modal -->
           <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderModal{{orderid}}">
           View Order
