--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -1,87 +1,115 @@
 <div class="container">
   <h1>Create an Order</h1>
- <p id="orderInstructions" class="showHide">Select Date and Customer and press "Begin Order".</p>
- <input id="order_number" value="{{next_order}}" class="hidden"></input>
-<form id="addOrder" >
-  <div class="row showHide" id="staticFields">
-   
-    <div class="form-group col-sm-6 col-md-4 col-lg-3">
-      <label for="date">Date</label>
-      <input style="max-width: 200px;" type="date" name="date" class="form-control" id="dateSelect"  placeholder="Date">
-  
-  </div>
-  <div class="form-group col-sm-6 col-md-4 col-lg-3">
-    <label for="customer">Customer</label>
-    <select class="form-control" id="nameSelect">
-      <option name="NULL">Select Customer</option>
-      {{#each customers}}
-      <option name="customerid" >{{firstname}} {{lastname}}</option>
-      {{/each}}
-      
-    </select>
-    
-  </div>
-  <div class="form-group col-sm-12"><div id="startButton" onclick="startOrder()" class="showHide btn btn-primary">Begin Order</div></div>
-  </div>
-  
-  <div class="row hidden hideShow" id="addFields">
-    <div class="col-sm-12"><p class="mt-4">Select Year, Brand, and Model, add relevant notes, and click "Add to Order."<br>
-  Repeat to add more than one product.</p></div>
-   <div class="form-group col-sm-6 col-md-4 col-lg-3">
-    <label for="brand">Year</label>
-    <select class="form-control" name="brand" id="selectYear">
-      <option >Select Year</option>
-      {{#each years}}
-      <option name="{{modelyear}}">{{modelyear}}</option>
-      {{/each}}
-    </select>
-  </div>
-  <div class="form-group col-sm-6 col-md-4 col-lg-3">
-    <label for="brand">Brand</label>
-    <select class="form-control" name="brand" id="selectBrand">
-      <option >Select Brand</option>
-      {{#each brands}}
-      <option name="{{brandid}}">{{brandname}}</option>
-      {{/each}}
-    </select>
-  </div>
-  <div class="form-group col-sm-6 col-md-4 col-lg-3">
-    <label for="model">Model</label>
-    <select class="form-control" name="model" id="selectModel">
-      <option>Select Model</option>
-      {{#each models}}
-      <option name="{{model}}" data-price="{{price}}">{{model}}</option>
-      {{/each}}
-    </select>
-  </div>
-  </div>
-  <div class="row hidden hideShow" id="notesField">
-  <div class="form-group col-sm-6">
-    <label for="notesArea">Notes</label>
-    <textarea class="form-control" id="notesArea" rows="3"></textarea>
-  </div>
-  <div class="form-group col-sm-12"><div id="addButton" onclick="addToOrder()" class="hidden hideShow btn btn-primary">Add to Order</div></div>
-  
-</form>
+  <p id="orderInstructions" class="showHide">Select Date and Customer and press "Begin Order".</p>
+  <input id="order_number" value="{{next_order}}" class="hidden"></input>
+  <form id="addOrder">
+    <div class="row showHide" id="staticFields">
+
+      <div class="form-group col-sm-6 col-md-4 col-lg-3">
+        <label for="date">Date</label>
+        <input style="max-width: 200px;" type="date" name="date" class="form-control" id="dateSelect" placeholder="Date">
+
+      </div>
+      <div class="form-group col-sm-6 col-md-4 col-lg-3">
+        <label for="customer">Customer</label>
+        <select class="form-control" id="nameSelect">
+          <option name="NULL">Select Customer</option>
+          {{#each customers}}
+            <option name="customerid">{{firstname}} {{lastname}}</option>
+          {{/each}}
+        </select>
+
+      </div>
+      <div class="form-group col-sm-12">
+        <div id="startButton" onclick="startOrder()" class="showHide btn btn-primary">Begin Order</div>
+      </div>
+    </div>
+
+    <div class="row hidden hideShow" id="addFields">
+      <div class="col-sm-12">
+        <p class="mt-4">Select Year, Brand, and Model, add relevant notes, and click "Add to Order."<br>
+          Repeat to add more than one product.</p>
+      </div>
+      <div class="form-group col-sm-6 col-md-4 col-lg-3">
+        <label for="brand">Year</label>
+        <select class="form-control" name="brand" id="selectYear">
+          <option>Select Year</option>
+          {{#each years}}
+            <option name="{{modelyear}}">{{modelyear}}</option>
+          {{/each}}
+        </select>
+      </div>
+      <div class="form-group col-sm-6 col-md-4 col-lg-3">
+        <label for="brand">Brand</label>
+        <select class="form-control" name="brand" id="selectBrand">
+          <option>Select Brand</option>
+          {{#each brands}}
+            <option name="{{brandid}}">{{brandname}}</option>
+          {{/each}}
+        </select>
+      </div>
+      <div class="form-group col-sm-6 col-md-4 col-lg-3">
+        <label for="model">Model</label>
+        <select class="form-control" name="model" id="selectModel">
+          <option>Select Model</option>
+          {{#each models}}
+            <option name="{{model}}" data-price="{{price}}">{{model}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </div>
+    <div class="row hidden hideShow" id="notesField">
+      <div class="form-group col-sm-6">
+        <label for="notesArea">Notes</label>
+        <textarea class="form-control" id="notesArea" rows="3"></textarea>
+      </div>
+      <div class="form-group col-sm-12">
+        <div id="addButton" onclick="addToOrder()" class="hidden hideShow btn btn-primary">Add to Order</div>
+      </div>
+  </form>
 </div>
 <div class="row">
-  <table id="orderTable">
-    <tr>
-      <th>Order #:</th><td id="orderNumber"></td>
-      <th>Date:</th>
-      <td id="orderDate"></td>
-      <th>Name:</th><td id="customerName"></td>
-      
-    </tr>
-    <tr >
-      <th>Year</th>
-      <th >Brand</th>
-      <th >Model</th>
-      <th >Price</th><th></th>
-      <th></th>
-    </tr>
+  <div class="col-sm-8">
+    <table id="orderTable">
+      <tr>
+        <th>Order #:</th>
+        <td id="orderNumber"></td>
+        <th>Date:</th>
+        <td id="orderDate"></td>
+        <th>Name:</th>
+        <td id="customerName"></td>
+      </tr>
+      <tr>
+        <th>Year</th>
+        <th>Brand</th>
+        <th>Model</th>
+        <th>Price</th>
+        <th></th>
+        <th></th>
+      </tr>
+    </table>
+  </div>
 
-  </table>
-  <div class="form-group col-sm-12"><div id="submitButton" onclick="submitOrder()" class="hidden hideShow btn btn-primary mt-4">Submit Order</div></div>
+  <div class="col-sm-4">
+    <table>
+      <tr>
+        <th>Tax:</th>
+      </tr>
+      <tr>
+        <td id="tax"></td>
+      </tr>
+      <tr>
+        <th>Total:</th>
+      </tr>
+      <tr>
+        <td id="total"></td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="form-group col-sm-12">
+    <div id="submitButton" onclick="submitOrder()" class="hidden hideShow btn btn-primary mt-4">Submit Order</div>
+  </div>
+
 </div>
 </div>
