put req body data into form element

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -74,13 +74,18 @@
     <table id="orderTable">
       <tr>
         <th>Order #:</th>
-        <td id="orderNumber" name="order_number" value="7"></td>
+        
+        <td id="orderNumber" ></td>
+        <input type="hidden" name="order_number" />
         <th>Date:</th>
-        <td id="orderDate" name="order_date" value="7"> </td>
+        <td id="orderDate" name="order_date" > </td>
+        <input type="hidden" name="order_date"/>
         <th>Name:</th>
-        <td id="customerName" name="customer" value="7"> </td>
+        <td id="customerName" name="customer" > </td>
+        <input type="hidden" name="customer">
         <th>ID:</th>
-        <td id="customerId" name="customerId" value="7"> </td>
+        <td id="customerId" name="customerId" > </td>
+        <input type="hidden" name="customerId">
       </tr>
       <tr>
         <th>Year</th>
