--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -27,12 +27,22 @@
 
     <div class="row hidden hideShow" id="addFields">
       <div class="col-sm-12">
-        <p class="mt-4">Select Year, Brand, and Model, add relevant notes, and click "Add to Order."<br>
+        <p class="mt-4">Select Vehicle, add relevant notes, and click "Add to Order."<br>
           Repeat to add more than one product.</p>
       </div>
-      <div class="form-group col-sm-6 col-md-4 col-lg-3">
+      <div class="form-group col-sm-6">
+        <label for="vehicle">Vehicle</label>
+        <select class="form-control" name="vehicle" id="selectVehicle">
+          <option>Select Vehicle</option>
+          {{#each vehicles}}
+          <option name="{{productid}}" data-modelyear="{{modelyear}}" data-brandname="{{brandname}}" data-model="{{model}}" data-price="{{price}}">{{modelyear}} {{brandname}} {{model}} {{price}}   
+          </option>
+          {{/each}}
+        </select>
+      </div>
+      {{!-- <div class="form-group col-sm-6 col-md-4 col-lg-3">
         <label for="brand">Year</label>
-        <select class="form-control" name="brand" id="selectYear">
+        <select class="form-control" name="year" id="selectYear">
           <option>Select Year</option>
           {{#each years}}
             <option name="{{modelyear}}">{{modelyear}}</option>
@@ -56,7 +66,7 @@
             <option name="{{model}}" data-price="{{price}}">{{model}}</option>
           {{/each}}
         </select>
-      </div>
+      </div> --}}
     </div>
     <div class="row hidden hideShow" id="notesField">
       <div class="form-group col-sm-6">
@@ -68,6 +78,12 @@
       </div>
   </form>
 </div>
+<div class="hidden">
+  <div id="p-modelyear">asdf</div>
+  <div id="p-brandname">asdf</div>
+  <div id="p-model">asdf</div>
+  <div id="p-price">asdf</div>
+</div>
 <div class="row">
   <div class="col-sm-8">
     <form id="submitOrder" action ="/order" method = "POST">
@@ -76,16 +92,16 @@
         <th>Order #:</th>
         
         <td id="orderNumber" ></td>
-        <input type="hidden" id="order_number_input" type="hidden" name="order_number" />
+        <input type="hidden" id="order_number_input" name="order_number" />
         <th>Date:</th>
         <td id="orderDate"  > </td>
-        <input type="hidden" id="order_date_input" type="hidden" name="date"/>
+        <input type="hidden" id="order_date_input" name="date"/>
         <th>Name:</th>
         <td id="customerName"  > </td>
         
         <th>ID:</th>
         <td id="customerId"  > </td>
-        <input type="hidden" id="customer_id_input" type="hidden" name="customerid">
+        <input type="hidden" id="customer_id_input" name="customerid">
       </tr>
       <tr>
         <th>Year</th>
@@ -124,3 +140,17 @@
 </form>
 </div>
 </div>
+<script>
+  
+  document.getElementById('selectVehicle').onchange = (event) => {
+  var modelyear = event.target.options[event.target.selectedIndex].dataset.modelyear;
+  var brandname = event.target.options[event.target.selectedIndex].dataset.brandname;
+  var model = event.target.options[event.target.selectedIndex].dataset.model;
+  var price = event.target.options[event.target.selectedIndex].dataset.price;
+  document.getElementById('p-modelyear').value = modelyear;
+  document.getElementById('p-brandname').value = brandname;
+  document.getElementById('p-model').value = model;
+  document.getElementById('p-price').value = price;
+  console.log(`${modelyear} ${brandname} ${model} : ${price}`);
+}
+</script>
