--- a/views/update-order.handlebars
+++ b/views/update-order.handlebars
@@ -1,16 +1,17 @@
-<html>
-<h1>Update Order Number {{order.orderid}} for {{order.lastname}}, {{order.firstname}}</h1>
-<form id="update-order" action="/invoices" method="put">
+<div class="container"><div class="row">
 
-    Price: <input type="number" name="price" value="{{order.price}}"><br>
-    Tax: <input type="number" name="tax" value="{{order.tax}}"><br>
-    Total: <input type="number" name="total" value="{{order.total}}"><br>
+<h1>Update Order Number {{order.orderid}} for {{order.lastname}}, {{order.firstname}}</h1>
+<form id="update-order" class="form-group" action="/invoices" method="put">
+
+    Price: <input class="form-control" type="number" name="price" value="{{order.price}}"><br>
+    Tax: <input class="form-control" type="number" name="tax" value="{{order.tax}}"><br>
+    Total: <input class="form-control" type="number" name="total" value="{{order.total}}"><br>
     
 
-    <button onclick="updateOrder({{order.orderid}})">Update</button>
-    <button onclick="updateOrdernull({{order.orderid}})">Update and Remove Order from Customer</button>
+    <button class="btn btn-primary" onclick="updateOrder({{order.orderid}})">Update</button>
+    <button class="btn btn-primary" onclick="updateOrdernull({{order.orderid}})">Update and Remove Order from Customer</button>
    
 </form>
 
+</div></div>
 
-</html>
