--- a/views/invoices.handlebars
+++ b/views/invoices.handlebars
@@ -24,33 +24,8 @@
           <td><button class="btn btn-primary" onclick="deleteOrder({{orderid}})">Delete</button></td>
           <td><a href="/invoices/{{orderid}}">Update</a></td>
                     <!-- Button trigger modal -->
-          <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderModal{{orderid}}">
-          View Order
-          </button></td>
+          <td><a href="/invoices/view/{{orderid}}">View Order</a></td>    
 
-<!-- Modal -->
-<div class="modal fade" id="orderModal{{orderid}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="orderModalLabel">{{orderid}} {{firstname}} {{lastname}}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>{{modelyear}} {{brandname}} {{model}} {{price}}</p>
-        <p>Tax: {{tax}}</p>
-        <p>Total: {{total}}</script></p>
-        
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        
-      </div>
-    </div>
-  </div>
-</div>
         </tr>
 
         {{/each}}
