--- a/views/customers.handlebars
+++ b/views/customers.handlebars
@@ -4,23 +4,23 @@
   <form id="addcustomer" action="/customers" method="post" class="row" >
     <div class="form-group col-sm-6 col-md-4">
       <label for="inputFirstName">First Name</label>
-      <input type="text" name="firstname" class="form-control" id="inputFirstName"  placeholder="First Name">
+      <input type="text" name="firstname" class="form-control" id="inputFirstName"  placeholder="First Name" required>
 
       <label for="inputLastName">Last Name</label>
-      <input type="text" name="lastname" class="form-control" id="inputLastName"  placeholder="Last Name">
+      <input type="text" name="lastname" class="form-control" id="inputLastName"  placeholder="Last Name" required>
       <label for="inputStreetAddress">Street Address</label>
-      <input type="text" name="street_address" class="form-control" id="inputStreetAddress"  placeholder="Street Address">
+      <input type="text" name="street_address" class="form-control" id="inputStreetAddress"  placeholder="Street Address" required>
       <label for="inputCity">City</label>
-      <input type="text" name="city" class="form-control" id="inputCity"  placeholder="City">
+      <input type="text" name="city" class="form-control" id="inputCity"  placeholder="City" required>
       <label for="inputState">State</label>
-      <input type="text" name="state" class="form-control" id="inputState"  placeholder="State">
+      <input type="text" name="state" class="form-control" id="inputState"  placeholder="State" required>
       <label for="inputZip">Zip</label>
-      <input type="text" name="zip" class="form-control" id="inputZip"  placeholder="Zip">
+      <input type="text" name="zip" class="form-control" id="inputZip"  placeholder="Zip" required>
       <label for="inputPhone">Phone Number</label>
-      <input type="text" name="phone"class="form-control" id="inputPhone"  placeholder="Phone Number">
+      <input type="text" name="phone"class="form-control" id="inputPhone"  placeholder="Phone Number" required>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" name="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" name="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
         
       </div>
     </div>
